@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.revision3"
        name="Revision3"
-       version="2.0.4" 
+       version="2.0.5" 
        provider-name="stacked">
   <requires>
     <import addon="xbmc.python" version="2.0"/>
-	<import addon="script.module.parsedom" version="1.0.0"/>
+	<import addon="script.module.parsedom" version="1.1.0"/>
 	<import addon="script.module.simple.downloader" version="0.9.3"/>
+	<import addon="script.module.buggalo" version="1.0.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
             library="default.py">
@@ -14,7 +15,8 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <summary>Revision3: The Best TV Shows on the Internet</summary>
-    <description>Revision3 is the leading television network for the internet generation. We create and produce all-original episodic community driven programs watched by a super-committed and passionate fan base. Our hyper-connected audience gets the vast majority of its entertainment, information and social connections through the internet.</description>
+    <description>The leading television network for the internet generation.</description>
     <platform>all</platform>
+	<language>en</language>
   </extension>
 </addon>
